<resources>
    <string name="app_name">SomeTask</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment1">Fragment 1</string>
    <string name="made_by_sds">Made by SDS</string>
    <string name="send1">Send</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="send2">Send</string>
    <string name="text_from_edit_text1">Text from Edit Text</string>
    <string name="number_of_fragment1">Fragment 1</string>
    <string name="send3">Send</string>
    <string name="text_from_edit_text2">Text from Edit Text</string>
    <string name="number_of_fragment2">Fragment 2</string>
    <string name="fragment_1_text">Fragment 1 text</string>
    <string name="fragment_2_text">Fragment 2 text</string>
    <string name="your_suggestions">Your suggestions?</string>
    <string name="enable">enabled</string>
    <string name="positive">true</string>
    <string name="return_changes">Return changes</string>
    <string name="cancel">Cancel</string>
    <string name="yes">OK</string>
    <string name="light_theme">\" Light Theme\"</string>
    <string name="dark_theme">\" Dark Theme\"</string>
    <string name="not_set">not set</string>
    <string name="setting_alert">Text and Theme</string>
    <string name="alert_gone">Alert gone</string>
</resources>